JAR test build.